chunks of text as strings to be inserted, instead of interpreting each
character in the pasted text as actual user input.  This results in a
paste experience similar to that under a window system, and significant
performance improvements when pasting large amounts of text.


* Changes in Specialized Modes and Packages in Emacs 24.5

** Lisp mode
*** Strings after `:documentation' are highlighted as docstrings.

** Rectangle editing
*** Rectangle Mark mode can have corners past EOL or in the middle of a TAB.
*** C-x C-x in rectangle-mark-mode now cycles through the four corners.
*** `string-rectangle' provides on-the-fly preview of the result.

+++
** Macro `pcase' now supports vector qpattern.

** New font-lock functions font-lock-ensure and font-lock-flush, which
should be used instead of font-lock-fontify-buffer when called from Elisp.

** Macro `minibuffer-with-setup-hook' takes (:append FUN) to mean
appending FUN to `minibuffer-setup-hook'.

** Calendar and diary

+++
*** New commands to insert diary entries with Chinese dates:
`diary-chinese-insert-anniversary-entry' `diary-chinese-insert-entry'
`diary-chinese-insert-monthly-entry', `diary-chinese-insert-yearly-entry'.

+++
*** Calendar can list and mark diary entries with Chinese dates.
See `diary-chinese-list-entries' and `diary-chinese-mark-entries'.

*** The mode line of the calendar buffer will not be modified if
`calendar-mode-line-format' is nil.

** New ERT function `ert-summarize-tests-batch-and-exit'.

---
** The Rmail commands d, C-d and u now handle repeat counts to delete or
undelete multiple messages.

** Rmail can now render HTML mail messages if your Emacs was built with
libxml2 or if you have the Lynx browser installed.  By default, Rmail
will display the HTML version of a mail message that has both HTML and
plain text parts, if display of HTML email is possible; customize the
`rmail-mime-prefer-html' option to `nil' if you don't want that.
