@@ -102,6 +102,9 @@ performance improvements when pasting large amounts of text.
 
 * Changes in Specialized Modes and Packages in Emacs 24.5
 
+** pcase
+*** New UPatterns `quote' and `app'.
+
 ** Lisp mode
 *** Strings after `:documentation' are highlighted as docstrings.
 
